metadata-classic/objects/CSAT__c.object
<CustomObject>
    <description>Custom object to store customer satisfaction survey offers and responses from getfeedback and other (e.g., help center)  integrated survey tools.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgentActedasBusinessParter__c</fullName>
        <description>[Agent Name] acted as a partner in my business.</description>
        <inlineHelpText>[Agent Name] acted as a partner in my business.</inlineHelpText>
        <label>Agent Acted as Business Parter</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentConfidence__c</fullName>
        <description>[Agent Name] gave me confidence in the solution provided.</description>
        <inlineHelpText>[Agent Name] gave me confidence in the solution provided.</inlineHelpText>
        <label>Agent Confidence</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentEmpoweredMeComment__c</fullName>
        <description>[Agent Name] empowered me to resolve my question or issue, comments.</description>
        <inlineHelpText>[Agent Name] empowered me to resolve my question or issue, comments.</inlineHelpText>
        <label>Agent Empowered Me Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentEmpoweredMe__c</fullName>
        <description>[Agent Name] empowered me to resolve my question or issue.</description>
        <inlineHelpText>[Agent Name] empowered me to resolve my question or issue.</inlineHelpText>
        <label>Agent Empowered Me</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentEnthusiastictoAssist__c</fullName>
        <description>[Agent name] was enthusiastic about assisting me</description>
        <inlineHelpText>[Agent name] was enthusiastic about assisting me</inlineHelpText>
        <label>Agent Enthusiastic to Assist</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentHelpedFeelSuccessful__c</fullName>
        <description>[Agent Name] helped me feel I can be successful on Thumbtack.</description>
        <inlineHelpText>[Agent Name] helped me feel I can be successful on Thumbtack.</inlineHelpText>
        <label>Agent Helped Feel Successful</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentInspiredMeComment__c</fullName>
        <description>[Agent Name] explained Thumbtack in a way that inspired me, comments.</description>
        <inlineHelpText>[Agent Name] explained Thumbtack in a way that inspired me, comments.</inlineHelpText>
        <label>Agent Inspired Me Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentInspiredMe__c</fullName>
        <description>[Agent Name] explained Thumbtack in a way that inspired me.</description>
        <inlineHelpText>[Agent Name] explained Thumbtack in a way that inspired me.</inlineHelpText>
        <label>Agent Inspired Me</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentRecommendationsComment__c</fullName>
        <description>[Agent Name] made recommendations for how I could be more successful on Thumbtack, comments.</description>
        <inlineHelpText>[Agent Name] made recommendations for how I could be more successful on Thumbtack, comments.</inlineHelpText>
        <label>Agent Recommendations Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentRecommendations__c</fullName>
        <description>[Agent Name] made recommendations for how I could be more successful on Thumbtack.</description>
        <inlineHelpText>[Agent Name] made recommendations for how I could be more successful on Thumbtack.</inlineHelpText>
        <label>Agent Recommendations</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgentUnderstoodBusinessNeeds__c</fullName>
        <description>[Agent Name] understood the needs of my business.</description>
        <inlineHelpText>[Agent Name] understood the needs of my business.</inlineHelpText>
        <label>Agent Understood Business Needs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSATComments__c</fullName>
        <description>Comments left on the free-form section of the CSAT Survey</description>
        <inlineHelpText>Comments left on the free-form section of the CSAT Survey</inlineHelpText>
        <label>CSAT Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSATDelay__c</fullName>
        <description>The time, in hours, that the CSAT survey was sent after the case was closed.</description>
        <label>CSAT Delay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>Manual Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSATIcon__c</fullName>
        <formula>CASE(CSATResponse__c, 
&quot;Good&quot;, IMAGE(&quot;https://thumbtack.my.salesforce.com/resource/1433431612000/CSATGood&quot;, &quot;good&quot;, 20, 20) , 
&quot;Bad&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1433431629000/CSATBad&quot;,&quot;bad&quot;, 20, 20), 
&quot;1&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378558000/CSAT1&quot;,&quot;1&quot;, 20, 20), 
&quot;2&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378642000/CSAT2&quot;,&quot;2&quot;, 20, 20), 
&quot;3&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378691000/CSAT3&quot;,&quot;3&quot;, 20, 20), 
&quot;4&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378728000/CSAT4&quot;,&quot;4&quot;, 20, 20), 
&quot;5&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378776000/CSAT5&quot;,&quot;5&quot;, 20, 20), 
&quot;Yes&quot;, IMAGE(&quot;https://thumbtack.my.salesforce.com/resource/1438378558000/CSAT5&quot;, &quot;Yes&quot;, 20, 20) , 
&quot;No&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378776000/CSAT1&quot;,&quot;No&quot;, 20, 20),
&quot;&quot;)</formula>
        <label>CSAT Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSATOwnerIsActive__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Owner Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSATOwnerName__c</fullName>
        <formula>OwnerFirstName__c &amp; &quot; &quot; &amp; OwnerLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSATResponse__c</fullName>
        <description>CSAT Response (Good or Bad - Old Zendesk Style for launch) (1 - 5 Likert scale post-release 2)</description>
        <inlineHelpText>CSAT Response</inlineHelpText>
        <label>CSAT Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <color>#78C953</color>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>Bad</fullName>
                    <color>#FF0000</color>
                    <label>Bad</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <color>#CC0000</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FF6600</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FFCC33</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#33CC00</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#009900</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSATReviewTeamComments__c</fullName>
        <label>Review Team Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSATReviewTeamDecision__c</fullName>
        <label>Review Team Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseCategory__c</fullName>
        <description>Field to display the case category at the time of Survey Response record creation.</description>
        <label>Case Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseClosedDateStamp__c</fullName>
        <description>Field to store the text-formatted date stamp of when the case was originally closed. Populated via workflow formula.</description>
        <label>Case Closed Date Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseClosedTimeStamp__c</fullName>
        <description>Field to store the text-formatted time stamp of when the case was originally closed.  Populated via workflow formula.</description>
        <label>Case Closed Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseHelpCenterTopic__c</fullName>
        <description>Formula field to reference the Case.HelpCenterVisitTopic__c field; used in reporting and list views.</description>
        <formula>Case__r.HelpCenterVisitTopic__c</formula>
        <label>Case Help Center Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOpenDateStamp__c</fullName>
        <description>Text area populated via workflow to stamp the date of the case created date in text format; used for email templates.</description>
        <label>Case Open Date Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOpenTimeStamp__c</fullName>
        <description>Text area populated via workflow to stamp the time of the case created date in text format; used for email templates.</description>
        <label>Case Open Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOrigin__c</fullName>
        <description>Formula field to display the Origin (Email, Web, Phone, Outbound) of the case.  Used in list views and reports.</description>
        <formula>TEXT(Case__r.Origin)</formula>
        <label>Case Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRefTag__c</fullName>
        <description>Formula field to bring over the Case Ref tag.  Used in email templates for survey offers.</description>
        <formula>Case__r.CaseRef__c</formula>
        <label>Case Ref Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSubcategory__c</fullName>
        <description>Field to display the case subcategory at the time of Survey Response creation.</description>
        <label>Case Subcategory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case from which the Survey was sent out</description>
        <inlineHelpText>This is the case from which the survey was sent.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoachingComments__c</fullName>
        <description>Add any additional feedback about survey.</description>
        <label>Coaching Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CoachingStatus__c</fullName>
        <description>This displays the coaching status for the survey.</description>
        <label>Coaching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommunicatedClearly__c</fullName>
        <description>The agent communicated clearly.</description>
        <inlineHelpText>The agent communicated clearly.</inlineHelpText>
        <label>Communicated Clearly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Neither agree nor disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>Formula field to bring over the contact&apos;s email address; used as a merge field in URL parameter to survey tool.</description>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <description>Formula field that brings over the associated contact&apos;s first name. Used in email templates sent from the Survey Response object.</description>
        <formula>Contact__r.FirstName</formula>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>Formula field to bring over the Salesforce Contact ID</description>
        <formula>Contact__r.Id</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <description>Formula field to bring over the contact&apos;s last name onto the CSAT object; used in email templates or as a merge field to a URL parameter.</description>
        <formula>Contact__r.LastName</formula>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRecordType__c</fullName>
        <description>This will display weather a survey contact is a pro or customer.</description>
        <formula>Contact__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactUserId__c</fullName>
        <description>Formula field to bring over the contact&apos;s Thumbtack User ID onto the CSAT record; used as a merge field in URL parameter to survey tool.</description>
        <formula>TEXT(Contact__r.usr_user_id__c)</formula>
        <label>Contact User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact who submitted the survey response</description>
        <inlineHelpText>The contact who submitted the survey response</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDateMinusOne__c</fullName>
        <description>Used in specific CSAT reports that use the THIS WEEK or LAST WEEK date range based on the Created date, to automatically match Thumbtack&apos;s work week, allowing for automation of weekly reports and dashboards.</description>
        <formula>CreatedDate - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date (Minus One)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>The time that the CSAT record was created; used for list views and reporting.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DisputeReason__c</fullName>
        <description>The reason the agent feels the CSAT should be modified.</description>
        <label>Dispute Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blacklisted pro/customer</fullName>
                </value>
                <value>
                    <fullName>Duplicate CSAT</fullName>
                </value>
                <value>
                    <fullName>Meant for another specialist</fullName>
                </value>
                <value>
                    <fullName>MC Escalation</fullName>
                </value>
                <value>
                    <fullName>Foreign language speaker</fullName>
                </value>
                <value>
                    <fullName>Could Not Connect but followed process</fullName>
                </value>
                <value>
                    <fullName>Bad response (1 or 2) but positive comment</fullName>
                </value>
                <value>
                    <fullName>Limited due to background check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisputeSysAdminChangesMade__c</fullName>
        <label>Dispute Sys Admin Changes Made</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dispute_Comments__c</fullName>
        <description>The reason, in text, the agent feels the CSAT should be modified.</description>
        <inlineHelpText>Please provide a detailed description and valid reason why you feel this CSAT should be changed.</inlineHelpText>
        <label>Dispute Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EasetoHandleIssue__c</fullName>
        <description>Field to store the response to the MI CSat survey question: Marketplace Integrity made it easy for me to handle the issue.</description>
        <inlineHelpText>Marketplace Integrity made it easy for me to handle the issue.</inlineHelpText>
        <label>Ease to Handle Issue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effortpersonallyputforthbyprocust__c</fullName>
        <label>Effort personally put forth by pro/cust</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very high effort</fullName>
                </value>
                <value>
                    <fullName>High effort</fullName>
                </value>
                <value>
                    <fullName>Medium effort</fullName>
                </value>
                <value>
                    <fullName>Low effort</fullName>
                </value>
                <value>
                    <fullName>Very low effort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FollowThroughonPromises__c</fullName>
        <description>Field to store the response to the MI CSat survey question: They followed through on promises made.</description>
        <inlineHelpText>They followed through on promises made.</inlineHelpText>
        <label>Follow Through on Promises</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HelpCenterSatisfaction__c</fullName>
        <label>Help Center Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsMyTeam__c</fullName>
        <description>Formula field to indicate true if the Logged in User&apos;s Team matches the Team stamped on the CSAT.  Used for dynamic list views, reports, and dashboards.</description>
        <formula>IF(ISBLANK(Team__c), False, 
IF(AND(ISBLANK(TEXT($User.SpoofAsTeam__c)),TEXT($User.Team__c) = Team__c), True, 
IF(TEXT($User.SpoofAsTeam__c) = Team__c, True, 
False)))</formula>
        <label>Is My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueResolved__c</fullName>
        <description>Was the question or issue you contacted Thumbtack about resolved?</description>
        <inlineHelpText>Was the question or issue you contacted Thumbtack about resolved?</inlineHelpText>
        <label>Issue Resolved</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KBArticleId__c</fullName>
        <description>The ID of the article that prompted the survey response.</description>
        <label>KB Article ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KBArticleImprovementReason__c</fullName>
        <description>The reason indicated by the public site visitor for article helpfulness.</description>
        <inlineHelpText>The reason indicated by the public site visitor for article helpfulness.</inlineHelpText>
        <label>KB Article Improvement Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KBArticleTitle__c</fullName>
        <description>The title of the article that prompted the survey response.</description>
        <label>KB Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KBArticleVersionId__c</fullName>
        <description>The ID of the Knowledge Article Version (KAV) for the article that prompted the survey response.</description>
        <label>KB Article Version ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KnowledgeofPoliciesandProcedures__c</fullName>
        <description>Field to store the response to the MI CSat Survey question: They were knowledgeable about Thumbtack policies and procedures.</description>
        <inlineHelpText>They were knowledgeable about Thumbtack policies and procedures.</inlineHelpText>
        <label>Knowledge of Policies and Procedures</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTCIcon__c</fullName>
        <formula>CASE(LikelihoodToUseTTAgain__c, 
&quot;Good&quot;, IMAGE(&quot;https://thumbtack.my.salesforce.com/resource/1433431612000/CSATGood&quot;, &quot;good&quot;, 20, 20) , 
&quot;Bad&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1433431629000/CSATBad&quot;,&quot;bad&quot;, 20, 20), 
&quot;1&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378558000/CSAT1&quot;,&quot;1&quot;, 20, 20), 
&quot;2&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378642000/CSAT2&quot;,&quot;2&quot;, 20, 20), 
&quot;3&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378691000/CSAT3&quot;,&quot;3&quot;, 20, 20), 
&quot;4&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378728000/CSAT4&quot;,&quot;4&quot;, 20, 20), 
&quot;5&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378776000/CSAT5&quot;,&quot;5&quot;, 20, 20), 
&quot;Yes&quot;, IMAGE(&quot;https://thumbtack.my.salesforce.com/resource/1438378558000/CSAT5&quot;, &quot;Yes&quot;, 20, 20) , 
&quot;No&quot;, IMAGE( &quot;https://thumbtack.my.salesforce.com/resource/1438378776000/CSAT1&quot;,&quot;No&quot;, 20, 20), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTC Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CSATs</relationshipLabel>
        <relationshipName>CSATs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LikelihoodToUseTTAgainComment__c</fullName>
        <description>Please explain the main reason for your rating.</description>
        <inlineHelpText>Please explain the main reason for your rating.</inlineHelpText>
        <label>LTC Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LikelihoodToUseTTAgain__c</fullName>
        <description>Based on the overall experience with your most recent interaction with support, are you more or less likely to continue using Thumbtack?</description>
        <inlineHelpText>Based on the overall experience with your most recent interaction with support, are you more or less likely to continue using Thumbtack?</inlineHelpText>
        <label>LTC Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                    <color>#78C953</color>
                    <label>Very likely</label>
                </value>
                <value>
                    <fullName>Likely</fullName>
                    <color>#B6E32E</color>
                    <label>Likely</label>
                </value>
                <value>
                    <fullName>Neither likely nor unlikely</fullName>
                    <color>#F3D904</color>
                    <label>Neither likely nor unlikely</label>
                </value>
                <value>
                    <fullName>Unlikely</fullName>
                    <color>#FF9900</color>
                    <label>Unlikely</label>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                    <color>#FF6666</color>
                    <label>Very unlikely</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#78C953</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#B6E32E</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#F3D904</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FF9900</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <color>#FF6666</color>
                    <label>1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoggedInUser__c</fullName>
        <description>Formula field to mark the checkbox true if the logged in user matches the User associated with the Survey Response.</description>
        <formula>IF(User__r.Id = $User.Id , True, False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIIncidentCategory__c</fullName>
        <description>Stamp of the MI Incident category that initiated the CSAT offer.</description>
        <label>MI Incident Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncidentOutcome__c</fullName>
        <description>The stamp of the MI Incident Outcome (pro or customer) that initiated the CSAT offer.</description>
        <label>MI Incident Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncidentSubcategory__c</fullName>
        <description>The stamp of the MI Incident subcategory that initiated the CSAT offer.</description>
        <label>MI Incident Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the MI Incident that initiated the CSAT record and subsequent response.</description>
        <label>MI Incident</label>
        <referenceTo>MIIncident__c</referenceTo>
        <relationshipLabel>CSATs</relationshipLabel>
        <relationshipName>CSATs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManagerDisputeComments__c</fullName>
        <label>Manager Dispute Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ManagerDisputeDecision__c</fullName>
        <label>Manager Dispute Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManualOverride__c</fullName>
        <description>Custom picklist field to trigger manual override workflow actions.</description>
        <label>Manual Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send Survey Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numberofinteractionstoresolution__c</fullName>
        <description>How many times did you interact with our customer support team before your issue was resolved?</description>
        <inlineHelpText>How many times did you interact with our customer support team before your issue was resolved?</inlineHelpText>
        <label>Number of interactions to resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>More than one</fullName>
                </value>
                <value>
                    <fullName>Issue is not resolved</fullName>
                </value>
                <value>
                    <fullName>4 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfferDateOnly__c</fullName>
        <formula>OfferDate__c  - (6/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Date (Date Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OfferDate__c</fullName>
        <description>Date/time of when the email alert was sent to the Contact offering the survey.</description>
        <label>Offer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OfferResponseDateOnly__c</fullName>
        <formula>OfferResponseDate__c - (6/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Response Date (Date Only)</label>
        <type>Date</type>
    </fields>
</CustomObject>